unpackaged/main/default/objects/Account/fields/Identified_as_Priority__c.field-meta.xml
<CustomField>
    <fullName>Identified_as_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Purple Squirrel Accounts and Contacts</inlineHelpText>
    <label>Identified as Priority</label>
    <type>Checkbox</type>
</CustomField>