unpackaged/main/default/objects/Account/fields/INC_5000_Rank__c.field-meta.xml
<CustomField>
    <fullName>INC_5000_Rank__c</fullName>
    <label>INC 5000 Rank</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>