unpackaged/main/default/objects/Account/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <description>Second tier of company's industry classification</description>
    <inlineHelpText>Second tier of company's industry classification</inlineHelpText>
    <label>Industry Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>