unpackaged/main/default/objects/Account/fields/IntercomCompanyId__c.field-meta.xml
<CustomField>
    <fullName>IntercomCompanyId__c</fullName>
    <description>Intercom Company ID</description>
    <label>IntercomCompanyId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>