unpackaged/main/default/objects/Account/fields/IsAccountOwnerActive__c.field-meta.xml
<CustomField>
    <fullName>IsAccountOwnerActive__c</fullName>
    <formula>Owner.IsActive</formula>
    <label>IsAccountOwnerActive</label>
    <type>Checkbox</type>
</CustomField>