unpackaged/main/default/objects/Account/fields/IsSupplier__c.field-meta.xml
<CustomField>
    <fullName>IsSupplier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the field to tell if an account is Partner or not.</description>
    <inlineHelpText>Use this for reporting.</inlineHelpText>
    <label>Is Supplier</label>
    <type>Checkbox</type>
</CustomField>