unpackaged/main/default/objects/Account/fields/Last_Account_Owner_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Account_Owner_Change_Date__c</fullName>
    <inlineHelpText>Date in which the Account Owner was changed last.</inlineHelpText>
    <label>Last Account Owner Changed Date</label>
    <type>DateTime</type>
</CustomField>