unpackaged/main/default/objects/Account/fields/Last_Account_Owner_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Account_Owner_Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>User by which the Account Owner was changed last by.</inlineHelpText>
    <label>Last Account Owner Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>