unpackaged/main/default/objects/Account/fields/Last_Activity_Date_AM__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date_AM__c</fullName>
    <formula>ENCODED:{!ID:ActivityMetric.LastActivityDateTime}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Last Activity Date AM</label>
    <type>DateTime</type>
</CustomField>