unpackaged/main/default/objects/Account/fields/Last_Year_Corporate_Hierarchy_Spend__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Corporate_Hierarchy_Spend__c</fullName>
    <label>Last Year Corporate Hierarchy Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>