unpackaged/main/default/objects/Account/fields/LD_USE_DnB_Connect__c.field-meta.xml
<CustomField>
    <fullName>LD_USE_DnB_Connect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow DnB Connect</label>
    <type>Checkbox</type>
</CustomField>