unpackaged/main/default/objects/Account/fields/LD_USE_DnB_Optimize__c.field-meta.xml
<CustomField>
    <fullName>LD_USE_DnB_Optimize__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow D&amp;B Optimizer</label>
    <type>Checkbox</type>
</CustomField>