unpackaged/main/default/objects/Account/fields/Lead_Generic_BDR_RR_FLAG__c.field-meta.xml
<CustomField>
    <fullName>Lead_Generic_BDR_RR_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for if an Account was converted from a Lead with a Generic Flag.</description>
    <inlineHelpText>Indicates that this record went through the Generic Round Robin for BDRs</inlineHelpText>
    <label>Lead Generic BDR - RR</label>
    <type>Checkbox</type>
</CustomField>