unpackaged/main/default/objects/Account/fields/Lead_NonGeneric_BDR_RR_FLAG__c.field-meta.xml
<CustomField>
    <fullName>Lead_NonGeneric_BDR_RR_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field represents an Account that was converted from a Lead that had a NonGeneric BDR RR.</description>
    <inlineHelpText>Indicates that this record went through the Non-Generic Round Robin for BDRs</inlineHelpText>
    <label>Lead Non-Generic BDR - RR</label>
    <type>Checkbox</type>
</CustomField>