unpackaged/main/default/objects/Account/fields/Lifetime_Account_Spend__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Account_Spend__c</fullName>
    <label>Lifetime Account Spend</label>
    <summarizedField>Opportunity.Order_Bookings_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>