unpackaged/main/default/objects/Account/fields/Lifetime_Number_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Number_of_Orders__c</fullName>
    <label>Lifetime Number of Orders</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>