unpackaged/main/default/objects/Account/fields/Lifetime_Spend__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Spend__c</fullName>
    <label>Lifetime Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>