unpackaged/main/default/objects/Account/fields/LinkedIn_Handle__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Handle__c</fullName>
    <description>LinkedIn handle of company</description>
    <inlineHelpText>LinkedIn handle of company</inlineHelpText>
    <label>LinkedIn Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>