unpackaged/main/default/objects/Account/fields/LOB_Creation__c.field-meta.xml
<CustomField>
    <fullName>LOB_Creation__c</fullName>
    <label>LOB Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Line_of_Business</valueSetName>
    </valueSet>
</CustomField>