unpackaged/main/default/objects/Account/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.family_treeRole_parntHQ_desc__c</formula>
    <label>Location Type</label>
    <type>Text</type>
</CustomField>