unpackaged/main/default/objects/Account/fields/LTV__c.field-meta.xml
<CustomField>
    <fullName>LTV__c</fullName>
    <formula>LTV_LKP__r.LTV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>