unpackaged/main/default/objects/Account/fields/LTV_LKP__c.field-meta.xml
<CustomField>
    <fullName>LTV_LKP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LTV_LKP</label>
    <referenceTo>LTV__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>