unpackaged/main/default/objects/Account/fields/Manually_Pushed_to_Pool__c.field-meta.xml
<CustomField>
    <fullName>Manually_Pushed_to_Pool__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Autopopulated via the Manually Push to Pool button on Account</inlineHelpText>
    <label>Manually Pushed to Pool</label>
    <type>Checkbox</type>
</CustomField>