unpackaged/main/default/objects/Account/fields/MK_Customer_Fit__c.field-meta.xml
<CustomField>
    <fullName>MK_Customer_Fit__c</fullName>
    <description>Madkudu customer fit emoji</description>
    <formula>CASE(MK_Customer_Fit_Segment__c,
'very good', IMAGE("https://cdn.madkudu.com/images/star.png", "Star", 20, 20) + IMAGE("https://cdn.madkudu.com/images/star.png", "Star", 20, 20) + IMAGE("https://cdn.madkudu.com/images/star.png", "Star", 20, 20),
'good', IMAGE("https://cdn.madkudu.com/images/star.png", "Star", 20, 20) + IMAGE("https://cdn.madkudu.com/images/star.png", "Star", 20, 20),
'medium', IMAGE("https://cdn.madkudu.com/images/star.png", "Star", 20, 20),
IMAGE("https://cdn.madkudu.com/images/cross.png", "Star", 20, 20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Madkudu customer fit emoji</inlineHelpText>
    <label>MK Customer Fit</label>
    <type>Text</type>
</CustomField>