unpackaged/main/default/objects/Account/fields/MK_Likelihood_to_Buy_Segment__c.field-meta.xml
<CustomField>
    <fullName>MK_Likelihood_to_Buy_Segment__c</fullName>
    <description>Madkudu likelihood to buy segment (very high, high, medium, low)</description>
    <inlineHelpText>Madkudu likelihood to buy segment (very high, high, medium, low)</inlineHelpText>
    <label>MK Likelihood to Buy Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>