unpackaged/main/default/objects/Account/fields/MK_Likelihood_to_Buy_Signals__c.field-meta.xml
<CustomField>
    <fullName>MK_Likelihood_to_Buy_Signals__c</fullName>
    <description>Madkudu likelihood to buy signals (most recent activities)</description>
    <inlineHelpText>Madkudu likelihood to buy signals (most recent activities)</inlineHelpText>
    <label>MK Likelihood to Buy Signals</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>