unpackaged/main/default/objects/Account/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <description>Two digit company NAICS (North American Industry Classification System) codes</description>
    <inlineHelpText>Two digit company NAICS (North American Industry Classification System) codes</inlineHelpText>
    <label>[decommisisoned] NAICS Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>