unpackaged/main/default/objects/Account/fields/NAICS_Description__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Description__c</fullName>
    <description>Description of Two digit company NAICS (North American Industry Classification System) codes</description>
    <inlineHelpText>Description of Two digit company NAICS (North American Industry Classification System) codes</inlineHelpText>
    <label>[decommisisoned] NAICS Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>