unpackaged/main/default/objects/Account/fields/NAICS_Update_Needed__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Update_Needed__c</fullName>
    <description>calculates if the Account needs to be related to a NAICS record (or different record)</description>
    <formula>DNBConnect__D_B_Connect_Company_Profile__c  != null &amp;&amp;
	DNBConnect__D_B_Connect_Company_Profile__r.IndustCodes_NAICS_priority1__c != NAICS__r.X6_Digit_NAICS_Code__c</formula>
    <label>NAICS Update Needed</label>
    <type>Checkbox</type>
</CustomField>