unpackaged/main/default/objects/Account/fields/Native_Global_Ultimate_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Native_Global_Ultimate_Parent_Id__c</fullName>
    <formula>IF(!ISBLANK(Parent.Parent.Parent.Parent.ParentId), "unknown", 
BLANKVALUE(Parent.Parent.Parent.Id, 
BLANKVALUE(Parent.Parent.Id, 
BLANKVALUE(Parent.Id, Id))))</formula>
    <label>Native Global Ultimate Parent Id</label>
    <type>Text</type>
</CustomField>