unpackaged/main/default/objects/Account/fields/Native_Parent_Complete_Company__c.field-meta.xml
<CustomField>
    <fullName>Native_Parent_Complete_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Native Parent Complete Company</label>
    <referenceTo>TracHier__Master_Account__c</referenceTo>
    <relationshipLabel>Accounts (Native Parent Complete Company)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>