unpackaged/main/default/objects/Account/fields/Native_Parent_Complete_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Native_Parent_Complete_Company_ID__c</fullName>
    <label>Native Parent Complete Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>