unpackaged/main/default/objects/Account/fields/Next_Activity_Date_AM__c.field-meta.xml
<CustomField>
    <fullName>Next_Activity_Date_AM__c</fullName>
    <formula>ENCODED:{!ID:ActivityMetric.NextActivityDateTime}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Next Activity Date AM</label>
    <type>DateTime</type>
</CustomField>