unpackaged/main/default/objects/Account/fields/Non_Managed_Services_RR_OwnerID__c.field-meta.xml
<CustomField>
    <fullName>Non_Managed_Services_RR_OwnerID__c</fullName>
    <description>Not a lookup to reduce locking.</description>
    <label>Non Managed Services RR OwnerID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>