unpackaged/main/default/objects/Account/fields/NonGeneric_BDR_RR_FLAG__c.field-meta.xml
<CustomField>
    <fullName>NonGeneric_BDR_RR_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that sets the account to be round robin via NonGeneric BDR</description>
    <inlineHelpText>Indicates that this record went through the Non-Generic Round Robin for BDRs</inlineHelpText>
    <label>Non-Generic BDR - RR</label>
    <type>Checkbox</type>
</CustomField>