unpackaged/main/default/objects/Account/fields/Number_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_Contacts__c</fullName>
    <label># of Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>