unpackaged/main/default/objects/Account/fields/Number_Orderers__c.field-meta.xml
<CustomField>
    <fullName>Number_Orderers__c</fullName>
    <label># of Buyers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>