unpackaged/main/default/objects/Account/fields/Number_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_Orders__c</fullName>
    <label>Lifetime No. of Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>