unpackaged/main/default/objects/Account/fields/Number_Quoters__c.field-meta.xml
<CustomField>
    <fullName>Number_Quoters__c</fullName>
    <label># of Quoters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>