unpackaged/main/default/objects/Account/fields/of_Buyers_at_Owner_Change__c.field-meta.xml
<CustomField>
    <fullName>of_Buyers_at_Owner_Change__c</fullName>
    <label># of Buyers at Owner Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>