unpackaged/main/default/objects/Account/fields/old_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>old_Account_Status__c</fullName>
    <label>[dnu] old_Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Quoter Account</fullName>
            </value>
            <value>
                <fullName>Quoter Account</fullName>
            </value>
            <value>
                <fullName>Customer Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>