unpackaged/main/default/objects/Account/fields/Ops_CustomerServiceLevel__c.field-meta.xml
<CustomField>
    <fullName>Ops_CustomerServiceLevel__c</fullName>
    <label>[Ops] Customer Service Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OpsCustomerServiceLevel</valueSetName>
    </valueSet>
</CustomField>