unpackaged/main/default/objects/Account/fields/OPS_Top_Quality_Customer__c.field-meta.xml
<CustomField>
    <fullName>OPS_Top_Quality_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[OPS] Top Quality Customer</label>
    <type>Checkbox</type>
</CustomField>