unpackaged/main/default/objects/Account/fields/Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type__c</fullName>
    <label>Owner Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>