unpackaged/main/default/objects/Account/fields/Owner_Type_Retention__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type_Retention__c</fullName>
    <description>References to Countdown Calculation to avoid confusion about where to find relevant information.</description>
    <formula>IF(ISPICKVAL(Account_Owner_Type__c,"BDR"),"See Account Retention Countdown",
IF(ISPICKVAL(Account_Owner_Type__c,"AM"),"See Contact Retention Countdown",null
)
)</formula>
    <label>Owner Type Retention</label>
    <type>Text</type>
</CustomField>