unpackaged/main/default/objects/Account/fields/Pacing_Stat__c.field-meta.xml
<CustomField>
    <fullName>Pacing_Stat__c</fullName>
    <formula>if(Last_Year_Account_Spend__c = 0
,null
,if(isblank(Last_Year_Account_Spend__c)
,null
,This_Year_Account_Spend__c / ((today()-date(year(today())-1,12,31))/365* Last_Year_Account_Spend__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the net neutral account spend pacing percentage for This Year Spend against Last Year Spend.</inlineHelpText>
    <label>Pacing Stat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>