unpackaged/main/default/objects/Account/fields/Parent_Account_a_Target__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_a_Target__c</fullName>
    <formula>Parent.X2020_Strategic_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[decommission]Parent Account a Target?</label>
    <type>Checkbox</type>
</CustomField>