unpackaged/main/default/objects/Account/fields/Parent_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Owner__c</fullName>
    <formula>Parent.Owner.FirstName &amp; " " &amp;
IF(ISBLANK(Parent.Owner.MiddleName),"",Parent.Owner.MiddleName &amp; " ") &amp;
Parent.Owner.LastName</formula>
    <label>Parent Account Owner</label>
    <type>Text</type>
</CustomField>