unpackaged/main/default/objects/Account/fields/Parent_Account_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Owner_ID__c</fullName>
    <formula>CaseSafeId(Parent.OwnerId)</formula>
    <label>Parent Account Owner ID</label>
    <type>Text</type>
</CustomField>