unpackaged/main/default/objects/Account/fields/Parent_Account_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Owner_Role__c</fullName>
    <formula>Parent.Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Owner Role</label>
    <type>Text</type>
</CustomField>