unpackaged/main/default/objects/Account/fields/ParentTarget2023__c.field-meta.xml
<CustomField>
    <fullName>ParentTarget2023__c</fullName>
    <description>Check if Parent Account is Target 2023</description>
    <formula>IF(  Parent.Target_Account_2023__c , true,false)</formula>
    <label>Parent Account is Target 2023</label>
    <type>Checkbox</type>
</CustomField>