unpackaged/main/default/objects/Account/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Use,  Use IsSupplier__c to diff.
This flag is not updated.</description>
    <inlineHelpText>Do Not Use,  Use IsSupplier__c to diff.
This flag is not updated.</inlineHelpText>
    <label>[DNU]Partner?</label>
    <type>Checkbox</type>
</CustomField>