unpackaged/main/default/objects/Account/fields/Physical_Country__c.field-meta.xml
<CustomField>
    <fullName>Physical_Country__c</fullName>
    <label>Physical Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>