unpackaged/main/default/objects/Account/fields/Physical_State_or_Province__c.field-meta.xml
<CustomField>
    <fullName>Physical_State_or_Province__c</fullName>
    <label>Physical State or Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Physical_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>State_or_Province</valueSetName>
    </valueSet>
</CustomField>