unpackaged/main/default/objects/Account/fields/Physical_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Physical_Zip_Code__c</fullName>
    <label>Physical Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>