unpackaged/main/default/objects/Account/fields/Projected_This_Year_Spend__c.field-meta.xml
<CustomField>
    <fullName>Projected_This_Year_Spend__c</fullName>
    <formula>This_Year_Corporate_Hierarchy_Spend__c / (TODAY()-DATE(year(today())-1,12,31)) * 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected This Year Corp Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>