unpackaged/main/default/objects/Account/fields/PSEGlobalNote__c.field-meta.xml
<CustomField>
    <fullName>PSEGlobalNote__c</fullName>
    <label>PSE Global Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>