unpackaged/main/default/objects/Account/fields/Punchout__c.field-meta.xml
<CustomField>
    <fullName>Punchout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Punchout</label>
    <type>Checkbox</type>
</CustomField>