unpackaged/main/default/objects/Account/fields/Quoter_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Quoter_Conversion__c</fullName>
    <formula>if( Number_Quoters__c =0,0,Number_Orderers__c/ Number_Quoters__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quoter Conversion</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>