unpackaged/main/default/objects/Account/fields/R_D_1000_Rank__c.field-meta.xml
<CustomField>
    <fullName>R_D_1000_Rank__c</fullName>
    <label>R&amp;D 1000 Rank</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>