unpackaged/main/default/objects/Account/fields/Retain_This_Account__c.field-meta.xml
<CustomField>
    <fullName>Retain_This_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if you would like to keep this account in your Account base.</inlineHelpText>
    <label>Retain This Account</label>
    <type>Checkbox</type>
</CustomField>