unpackaged/main/default/objects/Account/fields/Retention_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Retention_Countdown__c</fullName>
    <formula>if(  ispickval(Account_Owner_Type__c,'AM'),'See Contacts',
if(  BDR_Retention_Countdown_Calculation__c = 1234, '', text(BDR_Retention_Countdown_Calculation__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[DNU]Retention Countdown</label>
    <type>Text</type>
</CustomField>