unpackaged/main/default/objects/Account/fields/Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Range__c</fullName>
    <formula>if(
isblank(AnnualRevenue),null,
if(
AnnualRevenue &lt; 1000000,"$0-$1M",
if(
AnnualRevenue &lt; 10000000,"$1M-$10M",
if(
AnnualRevenue &lt; 50000000,"$10M-$50M",
if(
AnnualRevenue &lt; 100000000,"$50M-$100M",
if(
AnnualRevenue &lt; 250000000,"$100M-$250M",
if(
AnnualRevenue &lt; 500000000,"$250M-$500M",
if(
AnnualRevenue &lt; 1000000000,"$500M-$1B",
if(
AnnualRevenue &lt; 10000000000,"$1B-$10B",
if(
AnnualRevenue &gt;= 10000000000,"$10B+",
"unknown"
))))))))))</formula>
    <label>[dnu] Revenue Range</label>
    <type>Text</type>
</CustomField>