unpackaged/main/default/objects/Account/fields/Rolling_12_Spend__c.field-meta.xml
<CustomField>
    <fullName>Rolling_12_Spend__c</fullName>
    <inlineHelpText>Rolling 12 months spend for the Account. For example, If  the date is March 2019 the rolling 12 month spend would be all won Opportunities through April 2018 through today.</inlineHelpText>
    <label>Rolling 12 Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>