unpackaged/main/default/objects/Account/fields/RR_AssignedDate__c.field-meta.xml
<CustomField>
    <fullName>RR_AssignedDate__c</fullName>
    <description>The date that an Account has been assigned via Round Robin</description>
    <inlineHelpText>Date that this record went through the Round Robin</inlineHelpText>
    <label>RR - Assigned Date</label>
    <type>DateTime</type>
</CustomField>