unpackaged/main/default/objects/Account/fields/RR_Batch_Num__c.field-meta.xml
<CustomField>
    <fullName>RR_Batch_Num__c</fullName>
    <description>Used to Track the Current Placement of RR.</description>
    <inlineHelpText>The Round Robin batch number that this record went through</inlineHelpText>
    <label>RR - Batch Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>